# ADSI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
ingestion/: document_agent.py  figma_agent.py  hitl_export.py  llm.py  manual_wizard.py  router.py  schema_assembler.py  website_agent.py
schemas/: design-tokens.schema.json
tests/: test_clustering.py  test_document_parsing.py  test_figma_mapping.py  test_schema_validation.py
tools/: firecrawl_tool.py  pdf_table_extractor.py  style_parser.py  swatch_detector.py
