[project]
name = "adsi"
version = "0.1.0"
description = "A Agentic powered Design System Integration. This tool can help platforms with multi-tenancy help with personalization"
authors = [
    {name = "Sinichi2",email = "smvcruz@mymail.mapua.edu.ph"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
